# backend-flask/openapi-3.0.yml
@@ -1,28 +1,28 @@
-openapi: '3.0.2'
+openapi: "3.0.2"
 info:
   title: Cruddur Backend API
-  version: '1.0'
-    
+  version: "1.0"
+
 servers:
   - url: https://api.server.test/v1
 paths:
   /api/activities/home:
     get:
-      description: 'Return a feed of activity based on all users'
+      description: "Return a feed of activity based on all users"
       tags:
         - activities
       responses:
-        '200':
+        "200":
           description: Returns an array of activities"
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Activity'
+                  $ref: "#/components/schemas/Activity"
   /api/activities/search:
     get:
-      description: 'Return a feed of activity based on a search term'
+      description: "Return a feed of activity based on a search term"
       tags:
         - activities
       parameters:
@@ -34,14 +34,14 @@ paths:
             type: string
             example: "#100DaysOfCloud"
       responses:
-        '200':
+        "200":
           description: Returns an array of activities"
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Activity'
+                  $ref: "#/components/schemas/Activity"
   /api/activities:
     post:
       description: Create a new activitiy eg. Creating a Crud
@@ -61,17 +61,17 @@ paths:
                 ttl:
                   type: string
       responses:
-        '200':
+        "200":
           description: Returns a recently created activity"
           content:
             application/json:
               schema:
                 type: object
                 items:
-                  $ref: '#/components/schemas/Activity'
+                  $ref: "#/components/schemas/Activity"
   /api/activities/@{handle}:
     get:
-      description: 'Return a feed of activity for a specific user'
+      description: "Return a feed of activity for a specific user"
       tags:
         - activities
       parameters:
@@ -82,31 +82,31 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Returns an array of activities"
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Activity'
+                  $ref: "#/components/schemas/Activity"
   /api/message_groups:
     get:
-      description: 'Return a list of two way private conversations for the user'
+      description: "Return a list of two way private conversations for the user"
       tags:
         - messages
       responses:
-        '200':
+        "200":
           description: Returns an array of messages groups for a specific user
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/MessageGroup'
+                  $ref: "#/components/schemas/MessageGroup"
   /api/messages/@{handle}:
     get:
-      description: 'Returns private communication between two users'
+      description: "Returns private communication between two users"
       tags:
         - messages
       parameters:
@@ -117,17 +117,17 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Returns an array of messages between two users
           content:
             application/json:
               schema:
                 type: object
                 items:
-                  $ref: '#/components/schemas/Message'
+                  $ref: "#/components/schemas/Message"
   /api/messages:
     post:
-      description: 'Create a direct message between two users'
+      description: "Create a direct message between two users"
       tags:
         - messages
       requestBody:
@@ -140,14 +140,30 @@ paths:
                 user_receiver_handle:
                   type: string
       responses:
-        '200':
+        "200":
           description: Return a single message
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Message'
+                  $ref: "#/components/schemas/Message"
+
+  /api/activities/notifications:
+    get:
+      description: "Return a feed of activity for all of those that I follow"
+      tags:
+        - activities
+      parameters: []
+      responses:
+        "200":
+          description: Returns an array of activities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Activity"
 
 components:
   schemas:
@@ -159,10 +175,10 @@ components:
           example: 0056a369-4618-43a4-ad88-e7c371bf5582
         display_name:
           type: string
-          example: "Andrew Brown"
+          example: "Lijo Dominic"
         handle:
           type: string
-          example: "andrewbrown"
+          example: "lijodominic"
         message:
           type: string
           example: "Who likes pineapple on their pizza?"
@@ -192,7 +208,7 @@ components:
           example: 0056a369-4618-43a4-ad88-e7c371bf5582
         handle:
           type: string
-          example: "andrewbrown"
+          example: "lijodominic"
         message:
           type: string
           example: "Who likes pineapple on their pizza?"
@@ -217,10 +233,10 @@ components:
           example: 0056a369-4618-43a4-ad88-e7c371bf5582
         display_name:
           type: string
-          example: "Andrew Brown"
+          example: "Lijo Dominic"
         handle:
           type: string
-          example: "andrewbrown"
+          example: "lijodominic"
         message:
           type: string
           example: "Who likes pineapple on their pizza?"
